# cwapi3dpython

./: .gitattributes  .gitignore  .pip-tools.toml  .readthedocs.yaml  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerfile  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: filters.yml
.github/workflows/: docs.yml  publish.yml  stale.yml  test_docs_sanity.yml  test_publish.yml
cwapi3d/file_controller/: __init__.pyi
cwapi3d/roof_controller/: __init__.pyi
cwapi3d/utility_controller/: __init__.pyi
docs/: about.md  auto_attributes.md  command_line.md  community.md  connector_axis_controller.md  debug.md  element_controller.md  endtype_controller.md  example.md  file_controller.md  gen_ref_nav.py  geometry.md  get_started.md  guide.md  index.md  machine_controller.md  mcp.md  menu_controller.md  modules.md  packages.md  plugins.md  release.md  release_notes.md  release_notes_major.md  requirements.in  requirements.txt  roof_controller.md  scene_controller.md  tools_packages.md  utility_controller.md  videos.md
docs/documentation/: active_point_result.md  api_types.md  attribute_controller.md  attribute_display_settings.md  bim_controller.md  bim_team_upload_result.md  brep_data.md  cadwork.md  camera_data.md  connector_axis_controller.md  connector_axis_item.md  coordinate_system_data.md  dimension_controller.md  display_attribute.md  element_controller.md  element_filter.md  element_map_query.md  element_module_properties.md  element_type.md  endtype_controller.md  enums.md  extended_settings.md  file_controller.md  (+27 more)
element_controller/: __init__.pyi
geometry_controller/: __init__.pyi
list_controller/: __init__.pyi
site/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
tests/: test_docs.py
visualization_controller/: __init__.pyi
(+225 files in other folders)
